# Prediccion

./: .gitignore  Diccionario Deltat.txt  Diccionario Estaciones.txt  Prediction_Web.py  Prueba.txt  README.md  pyproject.toml  requirements.txt
API_Prediction/: Procfile
API_Prediction/model_GRU/: keras_metadata.pb
API_Prediction/model_GRU/variables/: variables.data-00000-of-00001
docs/acceptance/: exit_report.md
docs/business_understanding/: project_charter.md
docs/data/: data_definition.md  data_dictionary.md  data_summary.md
docs/deployment/: API_predictionhumity.md  deploymentdoc.md
docs/infrastructure/: infrastructure_docs.md
docs/modeling/: baseline_models.md  model_report.md
model_GRU/: saved_model.pb
model_GRU/variables/: variables.index
packagename/models/model_LSTM/: keras_metadata.pb  saved_model.pb
packagename/models/model_LSTM/variables/: variables.data-00000-of-00001  variables.index
packagename/models/model_RNN/: keras_metadata.pb  saved_model.pb
packagename/models/model_RNN/variables/: variables.data-00000-of-00001  variables.index
scripts/: .gitignore  MLproject  pyproject.toml  pyproject.toml.save
scripts/evaluation/: Evaluation.ipynb  Evaluation.py
scripts/preprocessing/: .gitignore  Preprocessing.ipynb  Preprocessing.py  pyproject.toml
scripts/preprocessing/preprocessing_humidity/: Preprocessing.py  main.py
scripts/training/: Humidity.py  Modeling.ipynb  Modeling.py  database.py  main.py  models.py
scripts/training/types/: conversor.py  hparams.py  models.py
