[tool.poetry]
name = "preprocessing"
version = "0.1.0"
description = "Terminal application to generate humidity Prediction."
authors = ["David Berrio, Oscar Guzman, Ivan D Ayala"]
license = "MIT"

[tool.poetry.dependencies]
python = ">3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
