[tool.poetry]
name = "preprocessing_humidity"
version = "0.1.0"
description = "Terminal application to generate humidity Prediction."
authors = ["David Berrio, Oscar Guzman, Ivan D Ayala"]
license = "MIT"

[tool.poetry.dependencies]
python = ">3.8"
pandas = "^1.4.2"
numpy = "^1.22.4"

[tool.poetry.dev-dependencies]
ipython = "^8.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
